2003-02-21  Jaka Mocnik  <jaka@gnu.org>

        * The Grand Librarification: to help viv at veeev dot com,
        the GtkHex widget, the HexDocument object and all relevant
        accessibility stuff have been moved into a separate library,
        libgtkhex, that comes bundled together with all the necessary
        includes and a pkgconfig description file.
        * in order to achieve this all config-dependent stuff has been
        moved out of the lib and into the main app. this might have
        resulted in introduction of a score of new bugs as the app itself
        was not  tested at all ;)

2003-02-17  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Removed "ar" from ALL_LINGUAS.

2003-02-15  Jaka Mocnik  <jaka@gnu.org>

	* src/chartable.c (hide_chartable_cb): sync chartable item.
	* src/converter.c (close_converter): sync converter item.
	* src/print.c (print_header): convert filename to utf8.
	* src/session.c: applied a patch from Pasupathi Duraisamy that
	prompts the user if logout is performed when changed files are
	still open.
	
Mon Feb 10 09:51:23 2003  Hidetoshi Tajima  <hidetoshi.tajima@sun.com>

	* src/findreplace.c (find_next_cb, find_prev_cb, replace_next_cb): 
	made "String was not found\n" translatable (#103610).

2003-01-29  Jaka Mocnik  <jaka@gnu.org>

	* src/gnome-print-font-*: code rip from gedit: dialog and picker
	for print fonts.
	* src/Makefile.am: add above to compilation.
	* src/preferences.c: use the above.
	this patch was submitted by Shivram U.

2003-01-28  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added Arabic (ar) to ALL_LINGUAS, fixed
	  libgnomeprint-2.2 requirement

2003-01-20  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Azeri (az) file

2003-01-12  Jaka Mocnik  <jaka@gnu.org>

	* help/C/ghex-C.omf, help/ja/ghex-ja.omf: fixed identifier url. patch
	by Artur Flinta.

2003-01-06  Jaka Mocnik  <jaka@gnu.org>

	* applied a patch from frederic crozat that makes ghex use