@@ -1,3 +1,8 @@
+2003-02-25  Shivram U  <shivaram.upadhyayula@wipro.com>
+
+	* src/ghex-window.c (ghex_window_close): If the last view has been 
+	destroyed, unref the document.
+
 2003-02-21  Jaka Mocnik  <jaka@gnu.org>
 
         * The Grand Librarification: to help viv at veeev dot com,
